--- a/codesandbox_training/react-search/package.json
+++ b/codesandbox_training/react-search/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "clipboard": "^1.7.1",
+    "github-fork-ribbon-css": "^0.2.1",
+    "prop-types": "latest",
+    "react": "^16.2.0",
+    "react-css-modules": "^4.7.6",
+    "react-dom": "^16.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
