--- a/codesandbox_training/react-search/package.json
+++ b/codesandbox_training/react-search/package.json
@@ -15,5 +15,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-scripts": "^1.1.4"
   }
 }
