--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-input-range": "^1.3.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "react-use": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
