--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "google-map-react": "^1.1.0",
     "jquery": "^3.3.1",
+    "lodash.debounce": "^4.0.8",
     "react": "^16.8.0-alpha.1",
     "react-autosize-textarea": "^5.0.0",
     "react-dom": "^16.8.0-alpha.1",
