--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
-    "react-use": "^5.2.1"
+    "react-use": "^5.2.1",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
