--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "axios": "^0.18.0",
     "google-map-react": "^1.1.0",
     "jquery": "^3.3.1",
+    "json-server": "^0.14.2",
     "lodash.debounce": "^4.0.8",
-    "react": "^16.8.0-alpha.1",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
+    "react": "16.8.3",
     "react-autosize-textarea": "^5.0.0",
-    "react-dom": "^16.8.0-alpha.1",
+    "react-dom": "16.8.3",
     "react-input-range": "^1.3.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
-    "react-use": "^5.2.1",
+    "react-use": "^5.4.1",
     "styled-components": "^4.1.3"
   },
   "scripts": {
@@ -34,6 +37,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-scripts": "^1.1.4"
+    "react-scripts": "2.0.4"
   }
 }
