--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lodash.debounce": "^4.0.8",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
+    "mobx-react-devtools": "^6.1.1",
     "react": "16.8.3",
     "react-autosize-textarea": "^5.0.0",
     "react-dom": "16.8.3",
@@ -37,6 +38,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "customize-cra": "^0.2.11",
     "react-scripts": "2.0.4"
   }
 }
