--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-autosize-textarea": "^5.0.0",
     "react-dom": "16.8.3",
     "react-input-range": "^1.3.0",
+    "react-loadable": "^5.5.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-use": "^5.4.1",
+    "redux": "^4.0.1",
     "styled-components": "^4.1.3"
   },
   "scripts": {
