--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "2.0.4",
     "react-use": "^5.4.1",
     "redux": "^4.0.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "typescript": "^3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
